--- a/css/custom.css
+++ b/css/custom.css
@@ -145,10 +145,7 @@ nav ul li a.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 40vh;
+  height: 20vh;
   font-size: 40px;
   text-transform: uppercase;
   font-weight: bold;
@@ -171,7 +168,7 @@ nav ul li a.active {
 
 .static-two {
   background-color: #130802e3;
-  height: 40vh;
+  height: 50vh;
   overflow-y: hidden;
   overflow-x: hidden;
   text-align: center;
@@ -200,7 +197,7 @@ nav ul li a.active {
   -webkit-transform: translateZ(-1px) scale(1.7);
           transform: translateZ(-1px) scale(1.7);
   /* Set the parallax section before the other elements. */
-  z-index: -1;
+  z-index: 1;
 }
 
 /* Different background images */
@@ -224,6 +221,7 @@ nav ul li a.active {
       grid-template-rows: 1fr 1fr;
   grid-gap: 50px;
   text-align: center;
+  z-index: 2;
 }
 
 .mainpagetext1 {
@@ -251,9 +249,25 @@ nav ul li a.active {
   height: 100%;
 }
 
+.boxthingsb {
+  -webkit-box-shadow: 12px 0px 5px -4px rgba(0, 0, 0, 0.164), -12px 0 5px -4px rgba(0, 0, 0, 0.164);
+          box-shadow: 12px 0px 5px -4px rgba(0, 0, 0, 0.164), -12px 0 5px -4px rgba(0, 0, 0, 0.164);
+  background: #2f0b01;
+  background: -webkit-gradient(linear, left top, right top, from(#2f0b01), color-stop(37%, #6e3205), color-stop(57%, #6e3205), to(#2f0b01));
+  background: linear-gradient(90deg, #2f0b01 0%, #6e3205 37%, #6e3205 57%, #2f0b01 100%);
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 0.5fr 1fr;
+      grid-template-rows: 0.5fr 1fr;
+  margin: 0 auto;
+  max-width: 1400px;
+  width: 100%;
+  height: 100%;
+}
+
 .boxthings8 {
-  -webkit-box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
-          box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
+  margin-top: 50px;
   vertical-align: middle;
   display: -ms-grid;
   display: grid;
@@ -262,10 +276,13 @@ nav ul li a.active {
 }
 
 .boxthings9 {
+  margin-top: 50px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 2fr 1fr;
       grid-template-columns: 2fr 1fr;
+  max-height: 900px;
+  max-width: 1400px;
 }
 
 .boxthings10 {
@@ -274,31 +291,70 @@ nav ul li a.active {
   vertical-align: middle;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr;
-      grid-template-columns: 2fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  max-height: 400px;
+}
+
+.boxthings10a {
+  -webkit-box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
+          box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
+  vertical-align: middle;
+  display: -ms-grid;
+  display: grid;
+  margin: 30px auto;
+}
+
+.boxthings10b {
+  vertical-align: middle;
+  margin: 60px 30px;
+}
+
+.boxthings10c {
+  vertical-align: middle;
+  margin: 30px 0px 0px 0px;
 }
 
 .boxthings11 {
   margin-bottom: 50px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.boxthings20 {
+  max-height: 500px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 .boxthings12 {
   vertical-align: middle;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 30px;
 }
 
 .card-header {
   text-align: center;
-  padding-top: 45%;
-  padding-bottom: 50%;
+  font-family: 'verdana';
+  max-height: 100px;
   font-size: 70px;
+  margin: auto;
+}
+
+.card-header5 {
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px;
+  font-size: 70px;
+  margin: auto;
+  width: 700px;
 }
 
 .card-header2 {
@@ -330,8 +386,8 @@ nav ul li a.active {
 .aboutimage {
   -webkit-box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
   box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
-  margin: 60px auto  60px 0px;
-  max-width: 900px;
+  margin: 10px auto  60px 0px;
+  width: 700px;
   overflow-x: hidden;
 }
 
@@ -366,13 +422,14 @@ nav ul li a.active {
   padding-bottom: 40px;
   padding-right: 20px;
   padding-left: 20px;
+  z-index: 2;
 }
 
 .lessonsimage {
   -webkit-box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
   box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
   margin: auto auto auto 0;
-  max-width: 400px;
+  width: 800px;
   overflow-y: hidden;
 }
 
@@ -381,6 +438,7 @@ nav ul li a.active {
   display: grid;
   grid-gap: 50px;
   text-align: center;
+  z-index: 2;
 }
 
 .rehersaltext {
@@ -398,12 +456,27 @@ nav ul li a.active {
   overflow-y: hidden;
 }
 
+.bassrepairimage {
+  -webkit-box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
+  box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
+  margin: auto;
+  max-width: 400px;
+  overflow-y: hidden;
+}
+
+.amprepairimage {
+  -webkit-box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
+  box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
+  margin: auto;
+  max-width: 600px;
+  overflow-y: hidden;
+}
+
 .boxthings13 {
   vertical-align: middle;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr;
-      grid-template-columns: 2fr 1fr;
+  margin-bottom: 30px;
 }
 
 .contacttextcontain {
@@ -419,6 +492,140 @@ nav ul li a.active {
   margin: auto 0 auto 0;
   -webkit-box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
   box-shadow: 13px 0px 32px 4px rgba(0, 0, 0, 0.75);
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+}
+
+/* Slideshow container */
+.slideshow-containerb {
+  position: relative;
+  margin: auto;
+  height: 660px;
+}
+
+.slideshow-containerc {
+  position: relative;
+  margin: auto;
+  max-height: 660px;
+}
+
+/* Make the images invisible by default */
+.Containers {
+  display: none;
+  max-width: 400px;
+  height: 600px;
+}
+
+/* Make the images invisible by default */
+.Containersb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 640px;
+}
+
+/* forward & Back buttons */
+.Back, .forward {
+  cursor: pointer;
+  position: absolute;
+  top: 48%;
+  width: auto;
+  margin-top: -23px;
+  padding: 17px;
+  color: grey;
+  font-weight: bold;
+  font-size: 19px;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+  border-radius: 0 5px 5px 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+/* Place the "forward button" to the right */
+.forward {
+  right: 0;
+  border-radius: 4px 0 0 4px;
+}
+
+/*when the user hovers,add a black background with some little opacity */
+.Back:hover, .forward:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption Info */
+.Info {
+  color: #e3e3e3;
+  font-size: 16px;
+  padding: 10px 14px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Worknumbering (1/3 etc) */
+.MessageInfo {
+  color: #f2f2f3;
+  font-size: 14px;
+  padding: 10px 14px;
+  position: absolute;
+  top: 0;
+}
+
+/* The circles or bullets and indicators */
+.dots {
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  margin: 0 3px;
+  background-color: #acc;
+  border-radius: 50%;
+  display: inline-block;
+  -webkit-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
+}
+
+.enable, .dots:hover {
+  background-color: #717161;
+}
+
+/* Faint animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.4s;
+  animation-name: fade;
+  animation-duration: 1.4s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .5;
+  }
+  to {
+    opacity: 2;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .5;
+  }
+  to {
+    opacity: 2;
+  }
 }
 
 @media only screen and (max-width: 780px) {
