--- a/custom.scss
+++ b/custom.scss
@@ -167,8 +167,8 @@ nav ul{
     position: relative;
     //display: flex;
     align-items: center;
-    justify-content: center;
-    height: 40vh;
+    //justify-content: center;
+    height: 20vh;
     font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
@@ -192,7 +192,7 @@ nav ul{
   
   .static-two {
     background-color: #130802e3;
-    height: 40vh;
+    height: 50vh;
     overflow-y: hidden;
     overflow-x: hidden;
     //padding-left: 1%;
@@ -226,7 +226,7 @@ nav ul{
     transform: translateZ(-1px) scale(1.7);
     
     /* Set the parallax section before the other elements. */
-    z-index: -1;
+    z-index: 1;
   }
   
   /* Different background images */
@@ -238,6 +238,7 @@ nav ul{
 
 
     background-size: fit;
+
   }
   
   .parallax-two::after {
@@ -251,6 +252,7 @@ nav ul{
   grid-template-rows: 1fr 1fr;
   grid-gap: 50px;
   text-align: center;
+  z-index: 2;
 }
 
 .mainpagetext1{
@@ -283,48 +285,108 @@ nav ul{
  }
 
 
+ .boxthingsb{
+  box-shadow: 12px 0px 5px -4px rgba(0, 0, 0, 0.164), -12px 0 5px -4px rgba(0,0,0,0.164);
+  //box-shadow: 6px 0 10px -4px rgba(0,0,0,0.53), -6px 0 10px -4px rgba(0,0,0,0.53);
+
+  background: rgb(47,11,1);
+  background: linear-gradient(90deg, rgba(47,11,1,1) 0%, rgba(110,50,5,1) 37%, rgba(110,50,5,1) 57%, rgba(47,11,1,1) 100%);
+
+
+  position: relative;
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+  margin: 0 auto;
+  max-width: 1400px;
+  //max-height: 1000px;
+  width: 100%;
+  height: 100%;
+ }
+
+
 .boxthings8{
-  box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
+  margin-top: 50px;
   vertical-align: middle;
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
 .boxthings9{
-  //max-height:500px;
+  margin-top: 50px;
   display: grid;
   grid-template-columns: 2fr 1fr ;
-
+  max-height: 900px;
+  max-width: 1400px;
 }
 
 .boxthings10{
   box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
   vertical-align: middle;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  max-height: 400px;
 }
+
+.boxthings10a{
+  box-shadow: inset 0 11px 11px -7px rgba(0, 0, 0, 0.55);
+  vertical-align: middle;
+  display: grid;
+  margin: 30px auto;
+}
+
+.boxthings10b{
+  vertical-align: middle;
+  margin: 60px 30px;
+}
+
+.boxthings10c{
+  vertical-align: middle;
+  margin: 30px 0px 0px 0px;
+}
+
 
 .boxthings11{
   margin-bottom: 50px;
   //max-height:500px;
   display: grid;
-  grid-template-columns: 1fr 2fr ;
+  grid-template-columns: 1fr 1fr ;
+
+}
+
+.boxthings20{
+  max-height:500px;
+  display: grid;
+  grid-template-columns: 1fr 1fr ;
 
 }
 
 .boxthings12{
   vertical-align: middle;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 30px;
 }
 
 
 .card-header{
   text-align: center;
-
-  padding-top: 45%;
-  padding-bottom: 50%;
+  font-family: 'verdana';
+  max-height: 100px ;
+  //padding-top: 45%;
+  //padding-bottom: 50%;
   font-size: 70px;
+  margin: auto;
 
+}
+
+.card-header5{
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px ;
+  //padding-top: 45%;
+  //padding-bottom: 50%;
+  font-size: 70px;
+  margin: auto;
+  width: 700px;
 }
 
 .card-header2{
@@ -366,8 +428,8 @@ nav ul{
   -moz-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
   box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
 
-  margin: 60px auto  60px 0px;
-  max-width: 900px;
+  margin: 10px auto  60px 0px;
+ width: 700px;
   overflow-x: hidden;
 }
 
@@ -406,6 +468,7 @@ nav ul{
   padding-bottom: 40px;
   padding-right: 20px;
   padding-left: 20px;
+  z-index: 2;
 }
 
 .lessonsimage{
@@ -414,7 +477,7 @@ nav ul{
   box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
 
   margin: auto auto auto 0 ;
-  max-width: 400px;
+  width: 800px;
   overflow-y: hidden;
 }
 
@@ -423,6 +486,7 @@ nav ul{
   display: grid;
   grid-gap: 50px;
   text-align: center;
+  z-index: 2;
 }
 
 .rehersaltext{
@@ -442,12 +506,32 @@ nav ul{
   overflow-y: hidden;
 }
 
+.bassrepairimage{
+  -webkit-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+  box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+
+  margin: auto;
+  max-width: 400px;
+  overflow-y: hidden;
+}
+
+.amprepairimage{
+  -webkit-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+  box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+
+  margin: auto;
+  max-width: 600px;
+  overflow-y: hidden;
+}
+
 
 .boxthings13{
   
   vertical-align: middle;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  margin-bottom: 30px;
 }
 
 .contacttextcontain{
@@ -467,6 +551,125 @@ nav ul{
   -webkit-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
   -moz-box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
   box-shadow: 13px 0px 32px 4px rgba(0,0,0,0.75);
+}
+
+* {box-sizing:border-box}
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+}
+
+
+/* Slideshow container */
+.slideshow-containerb {
+  position: relative;
+  margin: auto;
+  height: 660px;
+}
+
+.slideshow-containerc {
+  position: relative;
+  margin: auto;
+  max-height: 660px;
+}
+
+/* Make the images invisible by default */
+.Containers {
+  display: none;
+  max-width: 400px;
+  height: 600px;
+}
+
+/* Make the images invisible by default */
+.Containersb {
+  display: flex;
+  height: 640px;
+}
+
+/* forward & Back buttons */
+.Back, .forward {
+  cursor: pointer;
+  position: absolute;
+  top: 48%;
+  width: auto;
+  margin-top: -23px;
+  padding: 17px;
+  color: grey;
+  font-weight: bold;
+  font-size: 19px;
+  transition: 0.4s ease;
+  border-radius: 0 5px 5px 0;
+  user-select: none;
+}
+
+/* Place the "forward button" to the right */
+.forward {
+  right: 0;
+  border-radius: 4px 0 0 4px;
+}
+
+/*when the user hovers,add a black background with some little opacity */
+.Back:hover, .forward:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption Info */
+.Info {
+  color: #e3e3e3;
+  font-size: 16px;
+  padding: 10px 14px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Worknumbering (1/3 etc) */
+.MessageInfo {
+  color: #f2f2f3;
+  font-size: 14px;
+  padding: 10px 14px;
+  position: absolute;
+  top: 0;
+}
+
+/* The circles or bullets and indicators */
+.dots {
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  margin: 0 3px;
+  background-color: #acc;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+}
+
+.enable, .dots:hover {
+  background-color: #717161;
+}
+
+/* Faint animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.4s;
+  animation-name: fade;
+  animation-duration: 1.4s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
+}
+
+@keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
 }
 
 
@@ -542,6 +745,7 @@ nav ul{
         max-height: none;
         padding-top: 3%;
         grid-template-columns: 1fr;
+
     }
 
     .boxthings90{
