--- a/css/custom.css
+++ b/css/custom.css
@@ -353,6 +353,23 @@ nav ul li a.active {
   margin: auto;
 }
 
+.card-headerthing1 {
+  display: none;
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px;
+  font-size: 70px;
+  margin: auto;
+}
+
+.card-headerthing2 {
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px;
+  font-size: 70px;
+  margin: auto;
+}
+
 .card-header5 {
   text-align: center;
   font-family: 'verdana';
@@ -733,9 +750,13 @@ nav ul li a.active {
     display: block;
   }
   .boxthings9 {
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+  }
+  .card-headerthing2 {
     display: none;
   }
-  .boxthings90 {
+  .card-headerthing1 {
     display: block;
   }
   .boxthings8 {
