--- a/custom.scss
+++ b/custom.scss
@@ -381,6 +381,29 @@ nav ul{
 
 }
 
+.card-headerthing1{
+  display:none;
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px ;
+  //padding-top: 45%;
+  //padding-bottom: 50%;
+  font-size: 70px;
+  margin: auto;
+
+}
+
+.card-headerthing2{
+  text-align: center;
+  font-family: 'verdana';
+  max-height: 100px ;
+  //padding-top: 45%;
+  //padding-bottom: 50%;
+  font-size: 70px;
+  margin: auto;
+
+}
+
 .card-header5{
   text-align: center;
   font-family: 'verdana';
@@ -804,10 +827,15 @@ nav ul{
   }
 
   .boxthings9{
+    grid-template-columns: none;
+  }
+
+  .card-headerthing2{
     display: none;
   }
 
-  .boxthings90{
+
+  .card-headerthing1{
     display: block;
   }
 
